--- a/Stats Preview Card/style.css
+++ b/Stats Preview Card/style.css
@@ -77,6 +77,9 @@ body{
 .box-child{
     text-transform: uppercase;
     font-family:'Lexend Deca', sans-serif;
-    font-size:15px;
-
+    font-size:10px;
+    margin-top: 5px;
+}
+.margin-lr{
+    margin: 0px 50px;
 }
