--- a/Stats Preview Card/style.css
+++ b/Stats Preview Card/style.css
@@ -88,3 +88,45 @@ body{
 .margin-lr{
     margin: 0px 50px;
 }
+
+/* Media Queries */
+
+@media(max-width:375px){
+    .container{
+        min-height: 800px;
+        width:340px;
+        margin-top: 5vh;
+        margin-bottom: 5vh;
+        position:relative;
+    }
+    .image{
+        width:340px;
+        border-top-left-radius: 15px;
+        border-bottom-right-radius: 0px;
+        height: 250px;
+        position:absolute;
+        top:0px;
+    }
+    .text-part{
+        position: absolute;
+        width:340px;
+        top: 250px;
+    }
+    .heading, .paragraph{
+        margin:30px 32px;
+        text-align:center;
+    }
+    .links-block{
+        box-sizing: border-box;
+        height: 200px;
+        width:100px;
+        margin:auto;
+        margin-top: 20px;
+    }
+    .link-box{
+        display:block;
+        margin:30px 0px !important;
+        text-align:center;             
+    }
+    
+}
