--- a/Junior/huddle-landing-page-with-curved-sections-master/style.css
+++ b/Junior/huddle-landing-page-with-curved-sections-master/style.css
@@ -179,3 +179,90 @@ header .button{
     cursor: pointer;
     margin: auto;
 }
+
+footer{
+    margin-top:150px;
+}
+
+footer img{    
+    background-repeat: no-repeat;
+    width: 100vw;
+    margin:0px;
+    padding: 0px;
+    vertical-align: middle;  
+}
+
+footer .dark{
+    padding-top: 80px;
+    background-color: var(--dark-cyan);
+    min-height: 300px;
+}
+
+.flex-information{
+    display: flex;
+    justify-content: space-around;
+}
+.information{
+    color: white;
+    width: 50%;
+}
+
+.information img{
+    filter: brightness(0) invert(1);
+    width: 200px;
+}
+
+.information p{
+    width: 70%;
+    font-size: 14px;
+    margin: 30px 0px;
+}
+
+.information .information-icon {
+    display: inline-block;
+    height: 16px;
+    width: 16px;
+    margin-right: 15px;
+}
+
+.information .icon-text {
+    display: inline-block;
+    margin-top: 0px;
+    margin-bottom:10px;
+}
+
+.newsletter{
+    display: inline-block;
+    width: 48%;
+    color:white;
+}
+
+.newsletter h3{
+    text-transform: uppercase;
+}
+
+.newsletter p{
+    font-size: 14px;
+    margin: 30px 0;
+}
+
+.newsletter input{
+    padding: 5px;
+    height: 40px;
+    width: 270px;
+    border-radius: 8px;
+}
+
+.newsletter .submit{
+    height: 40px;
+    width: 150px;
+    background-color: var(--pink);
+    font-size: 14px;
+    font-weight: bold;
+    margin-left: 30px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    
+}
