added font awesome

--- a/Junior/huddle-landing-page-with-curved-sections-master/style.css
+++ b/Junior/huddle-landing-page-with-curved-sections-master/style.css
@@ -55,6 +55,12 @@ h1{
     border: 1px var(--pink) solid;
     border-radius: 30px;
     padding: 8px 25px;
+    transition: all 300ms;
+}
+
+.navbar .button:hover{
+    background-color: var(--pink);
+    color:white;
 }
 
 header{
@@ -82,7 +88,14 @@ header .container .button{
     padding: 20px 60px;
     background-color: var(--pink);
     border-radius: 50px;
+    border: 3px solid var(--pink);
     cursor: pointer;
+    transition: all 300ms;
+}
+
+header .container .button:hover{
+    background-color: white;
+    color: var(--pink);
 }
 
 .img-sm{
@@ -178,6 +191,13 @@ s
     border-radius: 50px;
     cursor: pointer;
     margin: auto;
+    border: 3px solid var(--pink);
+    transition: all 300ms;
+}
+
+.container .button:hover{
+    background-color: white;
+    color: var(--pink);
 }
 
 footer{
@@ -230,6 +250,14 @@ footer .dark{
     display: inline-block;
     margin-top: 0px;
     margin-bottom:10px;
+}
+
+.information .socials{
+    margin-top: 50px;
+}
+
+.information .socials i{
+    margin-right: 10px;
 }
 
 .newsletter{
