--- a/Junior/interactive-card-details-form-main/style.css
+++ b/Junior/interactive-card-details-form-main/style.css
@@ -130,7 +130,7 @@ body{
 }
 
 .form input:focus{
-    border-color: var(--very-dark-grey-violet);
+    /* border-color: var(--very-dark-grey-violet); */
     outline:none;
 }
 
@@ -178,11 +178,18 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px 0px;
+    height: 50px;
     border-radius: 15px;
     margin-top: 10px;
-
+    cursor: pointer;
+    /* transition: all 300ms;     */
 }
+
+/* .buttonForm:hover, .buttonContinue:hover{
+    border: 3px solid var(--very-dark-grey-violet);
+    background-color: white;
+    color:hsl(278, 68%, 11%);
+} */
 
 .completed{
     display: none;
